dhall/tests/type-inference/failure/unit/EquivalenceNotTerms.txt
Type error: error: EquivalenceArgumentsMustBeTerms
 --> <current file>:1:1
  |
1 | Bool === Bool
  | ^^^^^^^^^^^^^ EquivalenceArgumentsMustBeTerms
  |
